--- a/03/t1.html
+++ b/03/t1.html
@@ -24,24 +24,38 @@
             <img class="img-fluid" style="width: 1rem;" src="https://cn.vuejs.org/images/logo.png" alt="vue"> Vue - 常用指令
         </div>
         <hr>
-        <div class="mb-3">
-            <input type="text" class="form-control" v-model.number="score">
-            <small class="text-muted">Input your score, we were return a word.</small>
+        <div class="jumbotron">
+            <!--普通写法-->
+            <!--v-once 内容挂载之后不再改变（不接受双向绑定）-->
+            <h1 class="display-3" v-once>{{msg}}</h1>
         </div>
         <div class="jumbotron">
-            <h1 class="display-3" v-if="score > 80">Perfect !</h1>
-            <h1 class="display-3" v-else-if="score > 70">Great !</h1>
-            <h1 class="display-3" v-else-if="score > 60">Good !</h1>
-            <h1 class="display-3" v-else>Wtf ?</h1>
+            <!--v-text 方法覆盖整个标签-->
+            <!--标签中的 'test' 是不会展示出来的-->
+            <h1 class="display-3" v-text="msg">test</h1>
         </div>
+
+        <!--v-model 做双向绑定-->
+        <div class="mb-3">
+            <input type="text" class="form-control" v-model="msg">
+            <small class="form-text text-muted">Type wrods into the input, change the content below two jumbotron</small>
+        </div>
+        <!--v-html 将富文本编辑器内容解析为 html-->
+        <div class="jumbotron">{{content}}</div>
+        <div class="jumbotron" v-html="content"></div>
+
+        <!--v-pre 标签内容原样输出，不解析双花括号内( {{ ... }} )的内容-->
+        <div class="jumbotron" v-pre>{{content}}</div>
+
     </div>
 </div>
 <script>
-    // 字符串 0 ,在 v-if、v-show 中为 true
+    // 思考一：vue 的挂载不支持嵌套？
     let vm = new Vue({
         el: '.container',
         data: {
-            score : 0
+            msg: 'Hello, Vue!',
+            content: `<h1 class="display-3">Hello, Bootstrap!</h1>`
         }
     });
 </script>
