--- a/03/t2.html
+++ b/03/t2.html
@@ -25,14 +25,27 @@
         </div>
         <hr>
         <div class="mb-3">
-            <input type="text" class="form-control" v-model.number="score">
-            <small class="text-muted">Input your score, we were return a word.</small>
+            <select class="custom-select" v-model="floor">
+                <option value="0" selected>check floor</option>
+                <option value="1">F - 1</option>
+                <option value="2">F - 2</option>
+                <option value="3">F - 3</option>
+                <option value="4">F - 4</option>
+            </select>
+            <small class="text-muted">Please select which floor you want to live.</small>
         </div>
+
         <div class="jumbotron">
-            <h1 class="display-3" v-if="score > 80">Perfect !</h1>
-            <h1 class="display-3" v-else-if="score > 70">Great !</h1>
-            <h1 class="display-3" v-else-if="score > 60">Good !</h1>
-            <h1 class="display-3" v-else>Wtf ?</h1>
+            <!--v-if + v-else 做逻辑判断-->
+            <!--判断必须连在一起，中间不能有其他脚本-->
+            <!--与 v-show 不同的是，v-show 是改变标签的 display 样式，v-if + v-else 会隐藏整块标签-->
+            <h1 class="display-3 mb-2" v-if="floor > 3">High floor!</h1>
+            <h1 class="display-3 mb-2" v-else>Low floor!</h1>
+            <p class="lead">Low or high, it is not important, you should feel comfortable.</p>
+        </div>
+
+        <div class="jumbotron" v-show="floor > 1">
+            <h1 class="display-3 mb-2">Default floor is bigger than 1</h1>
         </div>
     </div>
 </div>
@@ -41,7 +54,9 @@
     let vm = new Vue({
         el: '.container',
         data: {
-            score : 0
+            floor: 0,
+            msg: 'Hello, Vue!',
+            content: `<h1 class="display-3">Hello, Bootstrap!</h1>`
         }
     });
 </script>
