--- a/03/t3.html
+++ b/03/t3.html
@@ -24,16 +24,10 @@
             <img class="img-fluid" style="width: 1rem;" src="https://cn.vuejs.org/images/logo.png" alt="vue"> Vue - 常用指令
         </div>
         <hr>
-        <div class="mb-3">
-            <input type="text" class="form-control" v-model.number="score">
-            <small class="text-muted">Input your score, we were return a word.</small>
-        </div>
-        <div class="jumbotron">
-            <h1 class="display-3" v-if="score > 80">Perfect !</h1>
-            <h1 class="display-3" v-else-if="score > 70">Great !</h1>
-            <h1 class="display-3" v-else-if="score > 60">Good !</h1>
-            <h1 class="display-3" v-else>Wtf ?</h1>
-        </div>
+        <ul class="list-group">
+            <!--v-for 循环数组，属性写在要循环输出的标签上-->
+            <li class="list-group-item list-group-item-action" v-for="fruit, key in fruits">{{key + 1}}. {{fruit}}</li>
+        </ul>
     </div>
 </div>
 <script>
@@ -41,7 +35,7 @@
     let vm = new Vue({
         el: '.container',
         data: {
-            score : 0
+            fruits : ['apple', 'banana', 'orange', 'peach', 'watermelon']
         }
     });
 </script>
